<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数独游戏</string>
    <string name="hello_world">数独游戏</string>
    <string name="menu_settings">Settings</string>
    <string name="begin">开始游戏</string>
    <string name="about">关于游戏</string>
    <string name="goon">继续游戏</string>
    <string name="exit">退出登录</string>
    <string name="info">9x9的方格内，分为3x3的小方格，每一横排每一竖排每一斜排都是1-9九个数字。每一横排每一竖排每一斜排不得重复任何一个数字。</string>
    <string name="btn_color_picker">背景颜色</string>
    <string name="btn_color_picker1">字体颜色</string>
    <string name="btn_color_picker2">线条颜色</string>

</resources>