<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:orientation="horizontal">

<LinearLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:gravity="center"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo">
    </ImageView>
    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/textView1"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="20dp"
        android:textColor="#969" />
    <Button
        android:id="@+id/btBegin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/begin"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/goon"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="修改密码"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="设置"
        android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>


