<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@drawable/main_back"
	android:gravity="center">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center"

		android:padding="50dp">
		<ImageView
			android:layout_width="180dp"
			android:layout_height="180dp"
			android:src="@drawable/logo">

		</ImageView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="颜色设置"
			android:textColor="#B0582D95"
			android:textSize="30dp">

		</TextView>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:orientation="vertical">
			<Button

				android:id="@+id/btn_color_picker"

				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/back_button"
				android:layout_marginTop="20dp"
				android:padding="5dp"
				android:layout_gravity="center"
				android:text="@string/btn_color_picker"
				android:textColor="#000000"/>


			<Button
				android:id="@+id/btn_color_picker1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/back_button"
				android:layout_marginTop="20dp"
				android:layout_gravity="center"
				android:padding="5dp"
				android:text="@string/btn_color_picker1"
				android:textColor="#000000"/>


			<Button
				android:id="@+id/btn_color_picker2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:background="@drawable/back_button"
				android:layout_gravity="center"
				android:padding="5dp"
				android:text="@string/btn_color_picker2"
				android:textColor="#000000"/>
		</LinearLayout>


	</LinearLayout>

</LinearLayout>